--- a/views/input.erb
+++ b/views/input.erb
@@ -4,4 +4,5 @@
 	<input type="text" name="post[in]" value="Type something" id="in" /><br />
 	<input type="submit" value="Reverse!">
 </form>
+<p>By Fernando Álvarez</p>
 
