--- a/views/output.erb
+++ b/views/output.erb
@@ -2,4 +2,6 @@
 <p>We've got some reversed string</p>
 <p>Reversed: <%= params[:post][:in].reverse %></p>
 <p>Click <a href="/">here</a> to do it again</p>
+<p>By Fernando Álvarez</p>
+
 
